# seo-agent

./: .env.example  .gitignore  README.md  pyproject.toml
seo_agent/: __init__.py  cli.py  config.py
seo_agent/agents/: __init__.py  investigator.py  reporter.py
seo_agent/analyzers/: __init__.py  anomaly.py  correlation.py  intent.py
seo_agent/collectors/: __init__.py  external.py  gsc.py  jira.py  redash.py  redshift.py  server_logs.py  ssr_check.py
seo_agent/models/: __init__.py  investigation.py  metrics.py
seo_agent/utils/: formatters.py
sql/: 01_daily_uv_by_domain_channel.sql  02_daily_ab_by_domain_channel.sql
